[package]
name = "agent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ftp = { version = "6.0.0", features = ["secure"] }
base64 = "0.21.2"
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
md5 = "0.7.0"
oracle = { version = "0.5.7", features = ["chrono", "stmt_without_lifetime", "aq_unstable"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
sha256 = "1.1.3"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
ssh2 = "0.9.4"
sys-info = "0.9.1"
tokio = { version = "1.28.2", features = ["full"] }
